Revert "optimize (don't need two input streams)"
This reverts commit 3a3098f4979bb297d92a3e6c0a20eed5fa01e5d4.