@@ -65,10 +65,9 @@ public class FrozenLibModResourcePackApi {
 		Optional<Path> resourcePack = container.findPath(subPath);
 		if (resourcePack.isPresent()) {
 			Path jarPackPath = resourcePack.get();
-			InputStream inputFromJar = Files.newInputStream(jarPackPath);
 
 			// Calculate SHA256 hash of the jar's zip file
-			String currentHash = calculateSHA256(inputFromJar);
+			String currentHash = calculateSHA256(jarPackPath);
 			// Check if the hash has changed
 			boolean hasHashChanged = skipHashCheck || hasHashChanged(packName, currentHash);
 
@@ -76,13 +75,11 @@ public class FrozenLibModResourcePackApi {
 			File destFile = new File(RESOURCE_PACK_DIRECTORY.toString(), zipPackName);
 			if (hasHashChanged || !destFile.exists()) {
 				if (destFile.exists()) {
-					if (!hasHashChanged) {
-						inputFromJar.close();
-						return;
-					}
+					if (!hasHashChanged) return;
 					destFile.delete();
 				}
 
+				InputStream inputFromJar = Files.newInputStream(jarPackPath);
 				FileUtils.copyInputStreamToFile(inputFromJar, destFile);
 				inputFromJar.close();
 
@@ -116,10 +113,10 @@ public class FrozenLibModResourcePackApi {
 	 * @return The SHA256 hash as a hexadecimal string.
 	 * @throws IOException If an I/O error occurs.
 	 */
-	private static String calculateSHA256(InputStream inputStream) throws IOException {
+	private static String calculateSHA256(Path path) throws IOException {
 		try {
 			MessageDigest digest = MessageDigest.getInstance("SHA-256");
-			byte[] fileBytes = inputStream.readAllBytes();
+			byte[] fileBytes = Files.readAllBytes(path);
 			byte[] hashBytes = digest.digest(fileBytes);
 
 			StringBuilder hexString = new StringBuilder();
